force-app/main/default/objects/Milestone__c/Milestone__c.object-meta.xml
<CustomObject>
    <description>[Technology Transfer Starter] A Milestone is a date-based series of actions that allow tasks to be created for a given IP record.</description>
    <label>Milestone</label>
    <nameField>
        <displayFormat>MSTONE{00000}</displayFormat>
        <label>Milestone Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Milestones</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>