force-app/main/default/objects/Milestone__c/fields/Date__c.field-meta.xml
<CustomField>
    <fullName>Date__c</fullName>
    <label>Date</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Disclosure Date</fullName>
            </value>
            <value>
                <fullName>Public Disclosure Date</fullName>
            </value>
            <value>
                <fullName>Created Date</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>