force-app/main/default/objects/Milestone__c/fields/IP_Milestone_Description__c.field-meta.xml
<CustomField>
    <fullName>IP_Milestone_Description__c</fullName>
    <label>Description</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>