force-app/main/default/objects/Milestone__c/fields/Number_of_Days__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Days__c</fullName>
    <description>Total Number of Task associated to this Milestone.</description>
    <inlineHelpText>Total Number of Task associated to this Milestone.</inlineHelpText>
    <label>Number of Days</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>