force-app/main/default/objects/Milestone__c/fields/Success_Plans__c.field-meta.xml
<CustomField>
    <fullName>Success_Plans__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Success Plans</label>
    <referenceTo>IP_Success_Plans__c</referenceTo>
    <relationshipName>Milestones</relationshipName>
    <type>Lookup</type>
</CustomField>