force-app/main/default/objects/Milestone__c/fields/When__c.field-meta.xml
<CustomField>
    <fullName>When__c</fullName>
    <description>When determines the date which the milestone should be completed before, after, or on in conjunction with the Days field.</description>
    <inlineHelpText>When determines the date which the milestone should be completed before, after, or on in conjunction with the Days field.</inlineHelpText>
    <label>When</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Before</fullName>
            </value>
            <value>
                <fullName>After</fullName>
            </value>
            <value>
                <fullName>On</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>