force-app/main/default/objects/Milestone__c/fields/Who__c.field-meta.xml
<CustomField>
    <fullName>Who__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The contact which is assigned the task.</description>
    <inlineHelpText>The contact which is assigned the task.</inlineHelpText>
    <label>Who</label>
    <referenceTo>Contact</referenceTo>
    <relationshipName>Milestones</relationshipName>
    <type>Lookup</type>
</CustomField>